# figure-studio

./: .gitignore  LICENSE  README.md  figure_studio_plan.md  pyproject.toml
examples/: demo.py  multi_figure.py  notebook_demo.ipynb
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Canvas.jsx  CombineModal.jsx  Inspector.jsx  Toolbar.jsx  api.js  styles.css
src/figure_studio/: __init__.py  artist_introspect.py  cli.py  client.py  code_gen.py  edit_ops.py  figure_state.py  palettes.py  presets.py  server.py
src/figure_studio/static/: index.html
src/figure_studio/static/assets/: index-6RuEYqKO.js  index-B0RluU18.js  index-CHzxLA1U.css  index-CVWJ2i0z.js  index-D8CJ1cSg.css  index-DMKrL81H.css  index-o5htjfSU.js  index-ryCIIVse.css  index-teQLgeN0.js
tests/: conftest.py  test_artist_introspect.py  test_code_gen.py  test_combine.py  test_edit_ops.py  test_end_to_end.py  test_multi_figure.py  test_palettes.py
tests/fixtures/: example_figures.py
